# ContribNow

./: .env.example  .gitignore  README.md  TEMPLATE.md  pyproject.toml  pytest.ini  requirements-cloud.txt  requirements.txt
.github/workflows/: test.yml
a3/: nanochat_modal.py  nanochat_part3.py  nanochat_part3_testLessGPU.py
a4/: nanochat_modal.py  nanochat_part3.py
app/: .env.example  .gitignore  ContribNow.spec  README.md  build.bat  launcher.py  requirements.txt
app/backend/: main.py  models.py
app/frontend/: package.json
backend/: Dockerfile  onboarding_guide_ex.md  requirements.txt
backend/app/: config.py  constants.py  main.py  models.py
db/migrations/: 001_cloud_safe_sync.sql
docs/: BACKEND.md  DATA_SCHEMA.md  PROFILING.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  types.ts
profiles/: profile_etl.py  profile_rag.py  profile_template.py
scripts/: query_db.py  run_pgvector_tests.sh  run_pipeline.py  sync_env_from_terraform.py
src/pipeline/: ast_imports.py  ast_utils.py  cloud_sync.py  index.py  ingest.py  (+3 more)
tests/: test_ast_imports.py  test_ast_utils_extended.py  test_chunking_interfaces.py  test_cloud_sync.py  test_cloud_sync_extended.py  test_embedding_batcher.py  test_huggingface_provider.py  test_index.py  test_indexing_failures.py  test_indexing_in_memory.py  test_ingest_unit.py  test_language_registry.py  test_load_unit.py  test_naive_chunking.py  test_pipeline_etl.py  test_postgres_vector_store.py  test_transform_deep.py  test_ts_code_chunking.py  test_ts_py_chunking.py
(+147 files in other folders)
