[project]
name = "contribnow"
version = "0.1.0"
description = "ContribNow ETL pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "tree-sitter>=0.25.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-java>=0.23.0",
]

[project.optional-dependencies]
cloud = ["psycopg[binary]>=3.2.0"]
ast = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-java>=0.23.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
